Fixed incorrect host and allowed env to define host

--- a/.env_sample
+++ b/.env_sample
@@ -11,6 +11,7 @@ DASHBOARD_USER=test
 DASHBOARD_PASS=$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
 
 # Wordpress
+WORDPRESS_DB_HOST=mysql
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=root
 WORDPRESS_DB_PASSWORD=password
