--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,7 +87,7 @@ services:
         image: wordpress:latest
         container_name: wordpress
         environment:
-            WORDPRESS_DB_HOST: db
+            WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST:-mysql}
             WORDPRESS_DB_USER: ${WORDPRESS_DB_USER:-root}
             WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD:-password}
             WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME:-wordpress}
