--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,8 @@ services:
     wordpress:
         image: wordpress:latest
         container_name: wordpress
+        depends_on:
+            - mysql
         environment:
             WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST:-mysql}
             WORDPRESS_DB_USER: ${WORDPRESS_DB_USER:-root}
