--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,6 +60,8 @@ services:
     mysql:
         image: mysql:5.7
         container_name: wordpress_mysql
+        volumes:
+            - ./mount/mysql:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: ${WORDPRESS_DB_PASSWORD:-password}
             MYSQL_DATABASE: ${WORDPRESS_DB_NAME:-wordpress}
@@ -76,6 +78,8 @@ services:
         container_name: wordpress
         depends_on:
             - mysql
+        volumes:
+            - ./mount/wordpress:/var/www/html
         environment:
             WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST:-mysql}
             WORDPRESS_DB_USER: ${WORDPRESS_DB_USER:-root}
